--- a/config.json
+++ b/config.json
@@ -9,6 +9,6 @@
     },
     "fr":{
         "greeting": "Bonjour, mond"
-        "farewell": "au revoir"
+        "farewell": "au revoirr"
     }
 }
